# property-utils

./: .envrc.example  404.html  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: doctest-package.yml  lint-package.yml  test-package.yml  type-check-package.yml
converter_types/: index.html
converters/: index.html
descriptors/: index.html
docs/: converter_types.md  converters.md  descriptors.md  feedback.md  index.md  installation.md  property.md  terminology.md  usage.md  validated_property.md
feedback/: index.html
installation/: index.html
property/: index.html
search/: search_index.json
src/property_utils/constants/: __init__.py  constants.py
src/property_utils/exceptions/: __init__.py  base.py  exceptions.py
src/property_utils/exceptions/properties/: __init__.py  property.py
src/property_utils/exceptions/units/: __init__.py  converter_types.py  descriptors.py
src/property_utils/properties/: __init__.py  property.py  validated_property.py
src/property_utils/tests/: data.py  utils.py
src/property_utils/tests/api/: test_api.py
src/property_utils/tests/properties/: property_utils.py  test_property.py  test_validated_property.py
src/property_utils/tests/units/: data.py  descriptors_utils.py  test_converter_types.py  test_converters.py  test_descriptors.py
src/property_utils/units/: __init__.py  aliases.py  converter_types.py  converters.py  descriptors.py  si_units.py  units.py
terminology/: index.html
units/: index.html
usage/: index.html
validated_property/: index.html
