[tool.black]
line-length = 88

[tool.mypy]
exclude = "tests"

[tool.setuptools.packages.find]
where = ["src"]
include = ["property_utils"]
exclude = ["property_utils.tests"]
namespaces = false

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "property-utils"
version = "0.1.0"
authors = [
    { name="Maximos Nikiforakis", email="nikiforos@live.co.uk" },
]
description = "Utilities for programming that involves physical properties"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]

[project.urls]
Homepage = "https://github.com/Maxcode123/property-utils"
Issues = "https://github.com/Maxcode123/property-utils/issues"